# passive_assistant

./: config.json  download_model.py  launch.pyw  main.py  pyproject.toml
assistant/: audio.py  genai.py  listener.py  overlay.py  settings.py  state.py  stt.py  tray.py  tts.py
